--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
-version: 2
+version: 2.1
 
 jobs:
   build:
     docker:
-      - image: docker:stable
+      - image: docker:19.03.8
     steps:
       - checkout
       - run: apk add make curl
       - setup_remote_docker:
-          version: 19.03.6
+          version: 19.03.8
       - run:
           name: debug
           command: 'echo "DOCKER_USERNAME: $DOCKER_USERNAME"'
