--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,12 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: docker:19.03.6
+      - image: docker:stable
     steps:
       - checkout
       - run: apk add make curl
       - setup_remote_docker:
-          version: 19.03.6
+          version: 18.09.3
       - run:
           name: debug
           command: 'echo "DOCKER_USERNAME: $DOCKER_USERNAME"'
