--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,15 @@ language: bash
 
 dist: bionic
 
+# From https://docs.travis-ci.com/user/customizing-the-build/
+# install: true
+#env:
+#  global:
+#    - DOCKER_CLI_EXPERIMENTAL=enabled
+# sudo: required
+#services:
+#  - docker
+
 env:
   - DOCKER_CLI_EXPERIMENTAL=enabled
 
@@ -12,9 +21,28 @@ before_install:
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) edge"
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  # - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  - docker version
+  # From https://github.com/multiarch/qemu-user-static:
+  - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+  - BUILD_NUMBER="${TRAVIS_BUILD_NUMBER}"
+  - >
+    if [[ "${TRAVIS_BRANCH}" == "master" && "${TRAVIS_PULL_REQUEST}" == "false" ]]; then
+      echo "We are building the master branch: version is official version."
+      BETA_MODE="false"
+    else
+      echo "We are not building the master branch (or we are in a PR mode). Building a beta version then"
+      BETA_MODE="true"
+    fi
+  - echo "TRAVIS_BRANCH=${TRAVIS_BRANCH} - DOCKER_USERNAME=${DOCKER_USERNAME} - BETA_MODE=${BETA_MODE}"
 
 script:
-  - docker version
-  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
-  - make
+  - make build-and-tests
+
+after_success:
+  - >
+    if [[ "${BETA_MODE}" == "false" ]]; then
+      echo "Building master branch. Let's also push the 'latest' tag on docker hub"
+      docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
+      make build-and-push
+    fi
