--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: docker:stable
     steps:
       - checkout
-      - run: apk add make curl
+      - run: apk add make curl bash
       - setup_remote_docker:
           version: 18.09.3
       - run:
