--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: docker:stable
+      - image: docker:19.03.8
     steps:
       - checkout
       - run: apk add make curl bash git
