--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run: apk add make curl bash git
       - setup_remote_docker:
-          version: 19.03.8
+          version: stable
       - run:
           name: debug
           command: 'echo "DOCKER_USERNAME: $DOCKER_USERNAME"'
