--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,22 @@
 version: 2.1
 
-orbs:
-  docker-buildx: foodles/docker-buildx@0.0.1
-
 jobs:
   build:
     docker:
-      - image: docker:19.03.8
+      - image: ubuntu:bionic
     steps:
       - checkout
-      - run: apk add make curl bash git
-      - setup_remote_docker:
-          version: 18.09.3 # Max supported version was found on https://circleci.com/docs/2.0/building-docker-images/
+      #- setup_remote_docker:
+      #    version: 18.09.3 # Max supported version was found on https://circleci.com/docs/2.0/building-docker-images/
+      - run: sudo rm -rf /var/lib/apt/lists/*
+      - run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      - run: lsb_release -cs
+      - run: sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) edge"
+      - run: sudo apt-get update
+      - run: sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+      - run: docker version
+      # run: From https://github.com/multiarch/qemu-user-static:
+      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - run:
           name: debug env variables
           command: 'echo "DOCKER_USERNAME: $DOCKER_USERNAME"'
