--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,14 @@ jobs:
       - checkout
       #- setup_remote_docker:
       #    version: 18.09.3 # Max supported version was found on https://circleci.com/docs/2.0/building-docker-images/
-      - run: rm -rf /var/lib/apt/lists/*
+      - run: apt-get update
+      - run: apt-get install -y curl sudo
+      - run: sudo rm -rf /var/lib/apt/lists/*
       - run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
       - run: lsb_release -cs
-      - run: add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) edge"
-      - run: apt-get update
-      - run: apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+      - run: sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) edge"
+      - run: sudo apt-get update
+      - run: sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
       - run: docker version
       # run: From https://github.com/multiarch/qemu-user-static:
       - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
