--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - setup_remote_docker:
           version: 18.09.3 # Max supported version was found on https://circleci.com/docs/2.0/building-docker-images/
       - run: apt-get update
-      - run: apt-get install -y curl sudo gnupg git lsb-release software-properties-common
+      - run: apt-get install -y sudo curl make gnupg lsb-release software-properties-common git
       - run: sudo rm -rf /var/lib/apt/lists/*
       - run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
       - run: lsb_release -cs
